--- a/package.json
+++ b/package.json
@@ -7,12 +7,10 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.21",
+    "lightningcss-darwin-arm64": "^1.29.3",
     "next": "^15.3.1",
-    "postcss": "^8.5.3",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "tailwindcss": "^4.1.4"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.0",
@@ -21,13 +19,16 @@
     "@eslint/js": "^9.25.1",
     "@types/node": "22.14.1",
     "@types/react": "19.1.2",
+    "autoprefixer": "^10.4.21",
     "eslint": "9.25.1",
     "eslint-config-next": "15.3.1",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-prettier": "^5.2.6",
     "husky": "^9.1.7",
     "lint-staged": "^15.5.1",
+    "postcss": "^8.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^3.4.17",
     "typescript": "5.8.3"
   }
 }
